--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -17,8 +17,13 @@
     - always
   set_fact:
     bc_boot_ip: "{{ groups['bcboot'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
-- name: "Set all peers ip addresses"
+- name: "Set block producer peers ip addresses"
   tags:
     - always
   set_fact:
     bc_peers_ip: "{{ groups['bcpeers'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+- name: "Set all our peers ip addresses"
+  tags:
+    - always
+  set_fact:
+    bc_all_ip: "{{ groups['allnodes'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
