--- a/defaults/main/main.yml
+++ b/defaults/main/main.yml
@@ -15,3 +15,4 @@ bc_docker_registry_url: "registry.gitlab.com"
 bc_docker_registry_login: false
 bc_docker_username: "@devopsman"
 bc_docker_password: "secret"
+bc_docker_log_driver: "json-file"
