--- a/molecule/monitoring/playbook.yml
+++ b/molecule/monitoring/playbook.yml
@@ -14,13 +14,17 @@
     bc_private_interface: enp0s8
   tasks:
     - name: "Add boot node to group bcboot"
+      tags:
+        - always
       add_host:
         name: "{{ item }}"
         groups: bcboot
         inventory_dir: "{{ hostvars[item].inventory_dir }}"
       loop: "{{ groups['all'] }}"
       when: '"boot" in hostvars[item]["ansible_hostname"]'
-    - name: "Add all nodes to group bcpeers"
+    - name: "Add block producer nodes to group bcpeers"
+      tags:
+        - always
       add_host:
         name: "{{ item }}"
         groups: bcpeers
@@ -28,6 +32,8 @@
       loop: "{{ groups['all'] }}"
       when: '"prod" in hostvars[item]["ansible_hostname"] or "boot" in hostvars[item]["ansible_hostname"]'
     - name: "Add monitnoring nodes to group monitoring_peer"
+      tags:
+        - always
       register: _create_group_monitoring
       add_host:
         name: "{{ item }}"
@@ -35,6 +41,42 @@
         inventory_dir: "{{ hostvars[item].inventory_dir }}"
       loop: "{{ groups['all'] }}"
       when: '"monitoring" in hostvars[item]["ansible_hostname"]'
+    - name: "Add all nodes to group allnodes"
+      tags:
+        - always
+      add_host:
+        name: "{{ item }}"
+        groups: allnodes
+        inventory_dir: "{{ hostvars[item].inventory_dir }}"
+      loop: "{{ groups['all'] }}"
+      when: '"prod" in hostvars[item]["ansible_hostname"] or "boot" in hostvars[item]["ansible_hostname"] or "full" in hostvars[item]["ansible_hostname"]'
+
+- name: "OS settings"
+  hosts: all
+  become: true
+  tasks:
+    - name: "Configuring ulimit"
+      block:
+        - pam_limits:
+            domain: root
+            limit_type: soft
+            limit_item: nofile
+            value: 65536
+        - pam_limits:
+            domain: root
+            limit_type: hard
+            limit_item: nofile
+            value: 65536
+        - pam_limits:
+            domain: '*'
+            limit_type: soft
+            limit_item: nofile
+            value: 65536
+        - pam_limits:
+            domain: '*'
+            limit_type: hard
+            limit_item: nofile
+            value: 65536
 
 - name: Converge boot node
   hosts: "*boot*"
@@ -47,7 +89,20 @@
     bc_haya_node_id: 0
     bc_haya_plugin_randpa: present
     bc_private_interface: eth1
+    fluentd_sources_conf:
+      - "type": forward
+        "params":
+          "port": 24224
+          "bind": 0.0.0.0
+    fluentd_outputs_conf:
+      - "type": forward
+        "tag": "docker.*"
+        "params":
+          "server":
+            "host": "{{ groups['monitoring_peer'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list |join(',') }}"
+            "port": "24224"
   roles:
+    - role: cloudalchemy.fluentd
     - role: tank.ansible-haya
 
 - name: Converge producer node
@@ -72,5 +127,21 @@
     admin_user: tank
     admin_password: tank
     bc_private_interface: eth1
+    fluentd_sources_conf:
+      - "type": forward
+        "params":
+          "port": 24224
+          "bind": 0.0.0.0
+    fluentd_outputs_conf:
+      - "type": file
+        "tag": "docker.*"
+        "params":
+          "path": /tmp/myapp_log
+          "compress": gzip
+          "buffer":
+            "timekey": 1d
+            "timekey_use_utc": true
+            "timekey_wait": 10m
   roles:
     - role: tank.ansible-haya
+    - role: cloudalchemy.fluentd
