--- a/tasks/blockchain/haya/boot.yml
+++ b/tasks/blockchain/haya/boot.yml
@@ -60,8 +60,11 @@
       - IPC_LOCK
     stop_timeout: 600
     pull: true
+    log_driver: "{{ bc_docker_log_driver | default(omit) }}"
     log_options:
-      max-size: "1g"
+      max-size: "{{ '1g' if bc_docker_log_driver == 'json-file' else omit }}"
+      fluentd-async-connect: "{{ 'true' if bc_docker_log_driver == 'fluentd' else omit }}"
+      fluentd-address: "{{ 'localhost:24224' if bc_docker_log_driver == 'fluentd' else omit  }}"
 
 - name: "Waiting"
   pause:
@@ -87,8 +90,6 @@
     creates: "{{ bc_path_state }}/importbootkey"
   register: import_producer_key
   ignore_errors: true
-#  failed_when: "('Nonexistent wallet' in import_producer_key.stderr or 'Key already exists' not in import_producer_key.stderr) and import_producer_key.rc != 0"
-#  changed_when: "'imported private key for' in import_producer_key.stdout"
 
 - debug:
     msg: "{{ import_producer_key.stderr_lines }}"
@@ -111,8 +112,6 @@
     creates: "{{ bc_path_state }}/importprodkeys-{{ item.name }}"
   register: import_all_producer_key
   ignore_errors: true
-#  failed_when: "('Nonexistent wallet' in import_all_producer_key.stderr or 'Key already exists' not in import_all_producer_key.stderr) and import_all_producer_key.rc != 0"
-#  changed_when: "'imported private key for' in import_all_producer_key.stdout"
   when: bc_peers_ip|length > index + 1
   loop_control:
     index_var: index
@@ -128,7 +127,6 @@
     touch {{ bc_path_state }}/createsysacc-{{ item }}
   args:
     creates: "{{ bc_path_state }}/createsysacc-{{ item }}"
-#  failed_when: "('Account name already exists' not in create_system_accounts.stderr) and create_system_accounts.rc != 0"
   changed_when: "'executed transaction' in create_system_accounts.stdout"
 
 
@@ -157,8 +155,6 @@
   args:
     chdir: "{{ bc_path_contracts }}"
     creates: "{{ bc_path_state }}/setabisyscontracts-{{ item.name }}"
-#  failed_when: "('already exists' not in set_abi_system_contracts.stderr) and set_abi_system_contracts.rc != 0"
-#  changed_when: "'Setting ABI' in set_abi_system_contracts.stdout"
 
 - name: Show stderr from set abi system contracts task
   debug:
@@ -180,8 +176,6 @@
   args:
     chdir: "{{ bc_path_contracts }}"
     creates: "{{ bc_path_state }}/setcodesyscontracts-{{ item.name }}"
-#  failed_when: "('already exists' not in set_code_system_contracts.stderr) and set_code_system_contracts.rc != 0"
-#  changed_when: "'Setting Code' in set_code_system_contracts.stdout"
 
 - name: Show stderr from set code system contracts task
   debug:
@@ -202,8 +196,6 @@
     touch {{ bc_path_state }}/createtoken
   args:
     creates: "{{ bc_path_state }}/createtoken"
-#  failed_when: "('already exists' not in create_token.stderr) and create_token.rc != 0"
-#  changed_when: "'executed transaction' in create_token.stdout"
 
 - name: Show stderr from create token task
   debug:
@@ -223,8 +215,6 @@
     touch {{ bc_path_state }}/allocatetokens
   args:
     creates: "{{ bc_path_state }}/allocatetokens"
-#  failed_when: "('quantity exceeds available supply' not in allocate_tokens.stderr) and allocate_tokens.rc != 0"
-#  changed_when: "'executed transaction' in allocate_tokens.stdout"
 
 - name: Show stderr from allocate tokens task
   debug:
@@ -244,8 +234,6 @@
   args:
     creates: "{{ bc_path_state }}/initsyscontracts-eosio"
     chdir: "{{ bc_path_contracts }}"
-#  failed_when: "('system contract has already been initialized' not in init_system_contracts.stderr) and init_system_contracts.rc != 0"
-#  changed_when: "'Setting Code' in init_system_contracts.stdout"
 
 - name: Show stderr from init system contracts task
   debug:
@@ -269,8 +257,6 @@
     touch {{ bc_path_state }}/createprodacc-{{ item.name }}
   args:
     creates: "{{ bc_path_state }}/createprodacc-{{ item.name }}"
-#  failed_when: "('Account name already exists' not in create_producers_account.stderr) and create_producers_account.rc != 0"
-#  changed_when: "'executed transaction' in create_producers_account.stdout"
   retries: 5
   delay: 3
   until: create_producers_account is success
@@ -297,8 +283,6 @@
     touch {{ bc_path_state }}/regprodacc-{{ item.name }}
   args:
     creates: "{{ bc_path_state }}/regprodacc-{{ item.name }}"
-#  failed_when: "('Account name already exists' not in reg_producers_account.stderr) and reg_producers_account.rc != 0"
-#  changed_when: "'executed transaction' in reg_producers_account.stdout"
   when: bc_peers_ip|length > index + 1
   loop_control:
     index_var: index
@@ -314,8 +298,6 @@
     touch {{ bc_path_state }}/voteprodacc-{{ item.name }}
   args:
     creates: "{{ bc_path_state }}/voteprodacc-{{ item.name }}"
-#  failed_when: "('Account name already exists' not in vote_producers_account.stderr) and vote_producers_account.rc != 0"
-#  changed_when: "'executed transaction' in vote_producers_account.stdout"
   when: bc_peers_ip|length > index + 1
   loop_control:
     index_var: index
