--- a/tasks/blockchain/haya/main.yml
+++ b/tasks/blockchain/haya/main.yml
@@ -46,7 +46,7 @@
     - always
   when:
     - bc_haya_comp_state_boot == "present"
-  include_tasks: "blockchain/{{ bc_name }}/{{ bc_component_name }}.yml"
+  include_tasks: "blockchain/{{ bc_name }}/{{ bc_component_name }}-contracts-{{ bc_haya_contracts }}.yml"
 
 - name: "Setup metrics to {{ bc_component_name }}"
   when:
