--- a/tasks/blockchain/haya/boot-contracts-dao.yml
+++ b/tasks/blockchain/haya/boot-contracts-dao.yml
@@ -158,7 +158,7 @@
 
 - name: copy contracts
   copy:
-    src: contracts/
+    src: configs/contracts/
     dest: "{{ bc_path_contracts }}"
 
 - name: set abi system contracts
