--- a/defaults/main/haya.yml
+++ b/defaults/main/haya.yml
@@ -7,7 +7,7 @@ bc_haya_comp_state_prod: absent
 bc_haya_comp_state_monitoring: absent
 bc_haya_comp_state_bench: absent
 
-bc_haya_image: "mixbytes/haya"
+bc_haya_image: "mixbytes/dao_node"
 bc_haya_plugin_randpa: "present"
 bc_path_contracts: "{{ bc_path_general }}/{{ bc_name }}/contracts"
 bc_haya_cli: "docker run --rm --network=host -v /:/host:ro {{ bc_haya_image }} /opt/haya/bin/haya-cli "
