--- a/molecule/monitoring/molecule.yml
+++ b/molecule/monitoring/molecule.yml
@@ -24,6 +24,8 @@ platforms:
       - "customize ['modifyvm', :id, '--cpuexecutioncap', '50']"
   - name: ubuntu1804-producer
     box: pogosoftware/ubuntu-18.04-docker
+    instance_raw_config_args:
+      - "vm.network 'forwarded_port', guest: 27017, host: 27017"
     interfaces:
       - auto_config: true
         network_name: private_network
