--- a/tasks/metrics/targets.yml
+++ b/tasks/metrics/targets.yml
@@ -7,4 +7,4 @@
     grafana_password: "{{ admin_password }}"
     org_id: "1"
     ds_type: "prometheus"
-    url: "http://localhost:9090"
+    url: "http://172.17.0.1:9090"
